--- a/0x01-react_intro/task_0/dashboard/src/App.css
+++ b/0x01-react_intro/task_0/dashboard/src/App.css
@@ -1,38 +1,42 @@
+:root {
+  --clr-txt-primary: #f14f4f;
+}
 .App {
-  text-align: center;
-}
+  height: auto;
+  margin: 0;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.2rem;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  height: 200px;
+  width: 100%;
+  border-bottom: 4px solid var(--clr-txt-primary);
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.App-header img {
+  height:200px;
+  width: 200px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-header h1 {
+  color: var(--clr-txt-primary);
+  text-align: center;
+  margin-left: 20px;
+}
+.App-body {
+height: 62vh;
+}
+.App-body p {
+  margin: 40px;
+}
+.App-footer {
+  text-align: center;
+  border-top: 4px solid var(--clr-txt-primary);
+}
+.App-footer p {
+  font-style: italic;
 }
